# sundial-astro-utils

./: .gitignore  README.md  pyproject.toml
scripts/: check_dbt_completions.py
sundial_airflow/: __init__.py  create_dag.py  dag_factory.py  dag_factory_legacy.py  dbt_runtime.py  feature_flags.py  hooks.py  listeners.py  notify.py  params.py  profiles.py  slack_alerts.py  source_discovery.py  task_log.py  warehouse_scaling.py  warehouses.py
sundial_airflow/backfill/: __init__.py  _audit.py  _dbt_runner.py  dag_factory.py  manifest_parser.py
sundial_airflow/backfill/_audit/: __init__.py  _base.py  bigquery.py  snowflake.py
sundial_airflow/chunking/: __init__.py  chunk_spec.py  graph.py  manifest_parser.py  run_plan.py  snowflake_compute.py  target.py  watermarks.py  window.py
sundial_airflow/reports/: __init__.py  bigquery.py  snowflake.py
sundial_dbt_shared/: dbt_project.yml
sundial_dbt_shared/macros/: backfill_tmp_relation.sql  dbt_completions.sql  incremental.sql
sundial_dbt_shared/macros/adapters/: bigquery.sql  snowflake.sql
tests/: test_acquire_run_lock.py  test_chunk_kwargs.py  test_chunk_windows.py  test_create_dag_params.py  test_dbt_completions_view.py  test_dbt_runtime.py  test_feature_flags.py  test_hooks.py  test_incremental_macros.py  test_listener_merge.py  test_manifest_parser_extract.py  test_notify.py  test_partition_watermarks.py  test_profiles.py  test_read_watermark.py  test_run_plan.py  test_slack_alerts.py  test_snowflake_compute.py  test_source_discovery.py  test_task_log.py  test_warehouse_scaling.py  test_window.py
tests/backfill/: test_audit.py  test_manifest_parser.py
